<resources>
    <string name="app_name">ProjecteFirebase</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_in">Sign In</string>
    <string name="login">LOGIN</string>
    <string name="SIGNIN">REGISTRARSE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_name">Item Name</string>
    <string name="stack_limit">Stack limit</string>
    <string name="itemname">ItemName</string>
    <string name="stacklimit">StackLimit</string>
    <string name="insert">Insert</string>
    <string name="stackable">Stackable</string>
    <string name="craftable">Craftable</string>
    <string name="stack_limit_number">Stack Limit Number</string>
    <string name="name">Name</string>
</resources>